material design test on index.ejs

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,3 @@
 <p>test footer</p>
+<script src="node_modules/material-components-web/dist/material-components-web.js"></script>
+<script>mdc.autoInit()</script>
