--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,4 @@
 
 <meta charset="utf-8">
 <title>My App</title>
+<link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
