--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -4,19 +4,22 @@
     <% include ../partials/head %>
   </head>
   <body>
-    <header>
-      <% include ../partials/header %>
+    <header class="mdc-toolbar mdc-toolbar--fixed">
+      <div class="mdc-toolbar__row">
+        <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
+          <span class="mdc-toolbar__title">My Board</span>
+        </section>
+      </div>
     </header>
-    <div class="posts">
-      <% include partials/top %>
-
+    <div class="mdc-toolbar-fixed-adjust">
       <div class="index">
         <a href="/posts/new"><button>New</button></a>
-        <ul>
+        <ul class="mdc-list mdc-list--two-line">
           <% data.forEach(function(e){ %>
-            <li>
-              <a href="/posts/<%= e._id %>"><%= e.title %></a>
-              <span><%= e.createdAt.toLocaleDateString() %></span>
+            <li class="mdc-list-item">
+              <a class="mdc-list-item__text" href="/posts/<%= e._id %>"><%= e.title %>
+                <span class="mdc-list-item__text__secondary"><%= e.createdAt.toLocaleDateString() %></span>
+              </a>
             </li>
           <% }) %>
         </ul>
