--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -14,6 +14,13 @@
     <div class="mdc-toolbar-fixed-adjust">
       <div class="index">
         <a href="/posts/new"><button>New</button></a>
+        <% if(user) {%>
+          <a href="/logout" class="float_right"><button>Logout</button></a>
+          <a href="/users/<%= user._id %>" class="float_right"><button>My Profile (<%= user.nickname %>)</button></a>
+        <% } else { %>
+          <a href="/login" class="float_right"><button>Login</button></a>
+          <a href="/users/new" class="float_right"><button>Sign Up</button></a>
+        <% } %>
         <ul class="mdc-list mdc-list--two-line">
           <% data.forEach(function(e){ %>
             <li class="mdc-list-item">
