fix javascript path

--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -11,7 +11,7 @@
 
       <!-- views/login/login.ejs -->
       <div>
-        <h3>Loggin</h3>
+        <h3>Log in</h3>
         <form class="login_form" action="/login" method="post">
           <label>Email</label>
           <input type="text" name="email" value="<%= email %>">
@@ -24,7 +24,7 @@
         </form>
         <a href="javascript:history.back()"><button>Back</button>
       </div>
-      
+
     </div>
     <footer>
       <% include ../partials/footer %>
