--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -25,10 +25,10 @@
     <p><small>*Required</small></p>
     <input type="button" class="submit_btn" value="Submit">
   </form>
-  <a href="javascript:history.back()"><button>Back</button>
+  <a href="javascript:history.back()"><button>Back</button></a>
 </div>
 <!-- javascript -->
-<script type="text/javascript" src="/js/userform.js"></script>
+<script type="text/javascript" src="/public/js/userform.js"></script>
 
 <!-- main end -->
     </div><!--users end -->
